# Modnet--matting-C-

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build  build.cu  cmake_install.cmake  modnet_test  modnet_test.cpp
cmake/: FindTensorRT.cmake
onnx-simplifier/onnxsim/: version.py
onnx-simplifier/onnxsim.egg-info/: SOURCES.txt
src/: engine.cu  engine.h  modnet.cpp  modnet.h
src/utils/: draw.cpp  preprocess.cpp  preprocess.h
torch2onnx/: simplify.py
